--- a/ux.html
+++ b/ux.html
@@ -41,8 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/pitchbook/job/oxLrbfwE'>PitchBook Data, Inc. Careers - UX Designer</a></h5> 
+<p><span class="badge badge-light">Seattle, Washington  Seattle San Francisco New York London Mumbai</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698531330-designer-ui-ux-ubisoft-club-'>Ubisoft Designer UI/UX (Ubisoft Club) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/splunk/job/oSnrbfwB'>Splunk Careers - Principal UX Designer, Applications</a></h5> 
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://hellomavis.com/job/ux-ui-designer-4/'>UX/UI Designer - Mavis</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hellomavis.com/job/ux-ui-designer-4/'>UX/UI Designer - Mavis</a></h5> 
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -225,7 +229,7 @@
 <p><span class="badge badge-light">M?nchen M?nchen, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Littleton, CO, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -237,7 +241,7 @@
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
       Senior UX Designer at Primer - San Francisco, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
@@ -267,7 +271,7 @@
 <p><span class="badge badge-light">Leicester London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -337,7 +341,7 @@
 <p><span class="badge badge-light">Delhi/NCR, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indacareer.recruitee.com/o/ux-designer-1'>
+<h5><a href='https://indacareer.recruitee.com/o/ux-designer-1'>
       UX Designer - indaHash
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -387,7 +391,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/hkEiYQdMaq/UX-Designer'>UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/hkEiYQdMaq/UX-Designer'>UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -411,7 +415,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694368712-ux-ui-engineer-ux-ui-developer-london'>Fulton Garrick Ltd UX/UI ENGINEER/ UX/UI DEVELOPER - LONDON | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694368712-ux-ui-engineer-ux-ui-developer-london'>Fulton Garrick Ltd UX/UI ENGINEER/ UX/UI DEVELOPER - LONDON | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -437,7 +441,7 @@
 <p><span class="badge badge-light">New York  San Francisco NYCLondon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.amazon.jobs/en/jobs/939284/sr-ux-designer-amazon-gift-cards-incentives'>Sr. UX Designer, Amazon Gift Cards &amp; Incentives - Job ID: 939284 | Amazon.jobs</a></h5> 
+<h5><a href='https://www.amazon.jobs/en/jobs/939284/sr-ux-designer-amazon-gift-cards-incentives'>Sr. UX Designer, Amazon Gift Cards &amp; Incentives - Job ID: 939284 | Amazon.jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -459,10 +463,6 @@
       Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">New York</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=obZkafwo&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ni0AmMwv'>ServiceNow Careers - Lead UX Designer</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  San Diego, California  Kirkland, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 
